<resources>
    <string name="app_name">CalendarApp341</string>
    <string name="editText_hint_username">Username</string>
    <string name="editText_hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="textView_haveAccount">Don\'t have an account?</string>
    <string name="textView_signUp">Sign up!</string>
    <string name="textView_policies">Read our privacy policy and user agreement.</string>
    <!-- Search Event Activity -->
    <string name="titleSearch">Search For Events</string>
    <string name="dateFromSearch">Date From</string>
    <string name="dateToSearch">Date To</string>
    <string name="categorySearch">Category</string>
    <string name="switchTitle">Multi Day Search</string>

    <string name="dateFormatSearch">dd/mm/yyyy</string>
    <string name="eventsTitle">Events:</string>
    <string name="multi_date_search">Multi Date Search</string>
    <string name="single">Single</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="doneSearch">DONE</string>
    <string name="textview">TextView</string>

    <string-array name="categorySpinnerSearch">
        <item>All</item>
        <item>School</item>
        <item>Work</item>
        <item>Personal</item>
        <item>Family</item>
    </string-array>

    <string name="editText_recipientNumber">Recipient\'s phone number</string>
    <string name="textView_phoneNumber">Phone Number:</string>
    <string name="button_sendSMS">Send</string>
    <string name="editText_testData">Enter test data</string>
    <string name="textView_testData">Test Data:</string>
    <string name="button_SMS">SMS</string>
    <string name="title_piechart">Pie Chart</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_group">Group</string>
    <string name="title_search">Search</string>
    <string name="textview_eventSMSDetails">Event Details Placeholder Text</string>
    <string name="textView_eventData">Event Data:</string>

    <string name="chart_desc">Each slice of the pie\n represents a tag for your events!\nCheck how you schedule your time:</string>
</resources>
