<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InviteSMS">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_nav_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />

    <EditText
        android:id="@+id/editText_recipientPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_recipientNumber"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/textView_phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_phoneNumber"
        app:layout_constraintTop_toTopOf="@+id/textView_phoneNumber" />

    <TextView
        android:id="@+id/textView_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/textView_phoneNumber"
        app:layout_constraintEnd_toStartOf="@+id/editText_recipientPhoneNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_eventSMSDetails" />

    <Button
        android:id="@+id/button_sendSMS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="buttonSendSMS"
        android:text="@string/button_sendSMS"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_eventSMSDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview_eventSMSDetails"
        app:layout_constraintStart_toStartOf="@+id/editText_recipientPhoneNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_eventData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textView_eventData"
        app:layout_constraintEnd_toEndOf="@+id/textView_phoneNumber"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>