<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SearchEventActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_nav_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_search"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/searchTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/titleSearch"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="41dp"
                tools:layout_conversion_absoluteWidth="411dp" />

            <Switch
                android:id="@+id/switchRagne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:gravity="center"
                android:text="@string/multi_date_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchTitle"
                tools:layout_conversion_absoluteHeight="47dp"
                tools:layout_conversion_absoluteWidth="150dp"

            />


            <TextView
                android:id="@+id/fromDateTextSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/dateFromSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchRagne"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="198dp" />

            <EditText
                android:id="@+id/fromDateInputSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/dateFormatSearch"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchRagne"
                tools:layout_conversion_absoluteHeight="45dp"
                tools:layout_conversion_absoluteWidth="213dp" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/dateToGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fromDateInputSearch">

                <TextView
                    android:id="@+id/toDateTextSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/dateToSearch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="19dp"
                    tools:layout_conversion_absoluteWidth="198dp" />


                <EditText
                    android:id="@+id/toDateInputSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:ems="10"
                    android:hint="@string/dateFormatSearch"
                    android:inputType="date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_conversion_absoluteWidth="213dp" />
            </android.support.constraint.ConstraintLayout>


            <TextView
                android:id="@+id/categoryTextSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/categorySearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateToGroup"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="206dp" />

            <Spinner
                android:id="@+id/categorySpinnerSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:entries="@array/categorySpinnerSearch"
                android:text="@string/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.587"
                app:layout_constraintStart_toEndOf="@+id/categoryTextSearch"
                app:layout_constraintTop_toBottomOf="@+id/dateToGroup"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="206dp" />


            <Button
                android:id="@+id/requestEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinnerSearch"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="206dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <requestFocus /></Button>



            <TextView
                android:id="@+id/eventsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/eventsTitle"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requestEvents"
                tools:layout_conversion_absoluteHeight="34dp"
                tools:layout_conversion_absoluteWidth="411dp" />

            <TextView
                android:id="@+id/displayEventsSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventsTitle"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="411dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>